Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-6147

[C++ broker linearstore] missing journal id in "trace Mgmt create journal." log

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • 0.30
    • Future
    • C++ Broker

    Description

      Description of problem:
      When creating a journal in linearstore, broker logs:

      2014-10-13 10:35:32 [Model] trace Mgmt create journal. id:

      without the queue name as expected id.

      The journal name / id in the relevant QMF object is set properly later on (see qpid-tool -> list journal), it is just missing in the trace log.

      How reproducible:
      100%

      Steps to Reproduce:
      1. qpidd --log-enable=trace+:qmf::org::apache::qpid::linearstore::Journal::Journal

      2. (in 2nd terminal) qpid-config add queue Durable --durable

      3. (in 1st terminal): check output; restart broker & check output

      Actual results:
      2014-10-13 12:55:28 [Model] trace Mgmt create journal. id:

      (without "Durable" as the id)
      (both when created via qpid-config and after restart)

      Expected results:
      2014-10-13 12:55:28 [Model] trace Mgmt create journal. id:Durable

      (both when created via qpid-config and after restart)

      Additional info:

      Attachments

        Activity

          People

            pmoravec Pavel Moravec
            pmoravec Pavel Moravec
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: